[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.17" }
hyper = { version = "0.14.26", features = ["full"] }
prost = { version = "0.11.9" }
prost-types = { version = "0.11.9" }
tokio = { version = "1.27.0", features = ["full"] }
tonic = { version = "0.9.2" }
tonic-web = { version = "0.9.2" }

[build-dependencies]
tonic-build = { version = "0.9.2" }
